# capture

./: .gitignore  .gitmodules  CMakeLists.txt  FallFoliage.ppm  README.md
docs/: Doxyfile.in
src/: capture.h  main.cpp  pdf.h  png.h  rgb.h  utils.h
tests/: image.cpp  mainimport.cpp  rgb.cpp  test1.cpp
